[package]
name = "shrust"
version = "0.0.6"
description = "A library for creating interactive command line shells in Rust"
authors = ["Pierre-Henri Symoneaux"]
repository = "https://github.com/phsym/shrust"
homepage = "https://github.com/phsym/shrust"
documentation = "http://phsym.github.io/shrust"
readme = "README.md"
license = "MIT"
keywords = ["shell", "console", "interactive", "terminal", "command"]

[dependencies]
prettytable-rs = "^0.8"
